--- a/stats-app/src/styles/App.css
+++ b/stats-app/src/styles/App.css
@@ -3,6 +3,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #eee;
+}
+
+.app {
+  border: 1px solid #ddd;
+  background-color: #fff;
 }
 
 .app h1 {
