--- a/stats-app/src/styles/App.scss
+++ b/stats-app/src/styles/App.scss
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #eee;
+}
+
+.app {
+  border: 1px solid #ddd;
+  background-color: #fff;
 }
 
 .app h1 {
