--- a/stats-app/src/styles/App.css
+++ b/stats-app/src/styles/App.css
@@ -16,4 +16,11 @@ body {
   border-bottom: 1px solid gray;
   margin-bottom: 30px;
 }
+
+.footer {
+  border-top: 1px solid gray;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 0.9em;
+}
 /*# sourceMappingURL=App.css.map */
