--- a/stats-app/src/styles/App.scss
+++ b/stats-app/src/styles/App.scss
@@ -18,3 +18,10 @@ body {
   border-bottom: 1px solid gray;
   margin-bottom: 30px;
 }
+
+.footer {
+  border-top: 1px solid gray;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 0.9em;
+}
